@@ -1,5 +1,7 @@
 - ADD: TME shows the differences in whitespaces
        inside a line too. (Stefan)
+- ADD: New option to not convert files before
+       diffing with BASE. (Stefan)
 - CHG: Use a fixed width font for log messages. (Stefan)
 - BUG: Fixed a bug in LogDlg, where Double-click 
        and right-click behaved differently. 
